testing/macro-tests/tests/ui/index_reserved_namespace.stderr
error: entity name '~UiIndexedEntity' uses reserved '~' namespace
  --> tests/ui/index_reserved_namespace.rs:16:12
   |
16 |     name = "~UiIndexedEntity",
   |            ^^^^^^^^^^^^^^^^^^
